--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,21 +1,11 @@
 {
-  "builds": [
-    { "src": "/backend/**/*.js", "use": "@vercel/node" },
-    { "src": "/frontend/**", "use": "@vercel/static" }
+  "builds":[
+      { "src": "*.js", "use": "@vercel/node"}
   ],
-  "routes": [
-    { "handle": "filesystem" },
+  "routes" : [
     {
-      "src": "/backend/(.*)",
-      "dest": "backend/$1"
-    },
-    {
-      "src": "/public/(.*)",
-      "dest": "public/$1"
-    },
-    {
-      "src": "/src/(.*)",
-      "dest":"src/$1"
+      "src": "/(.*)",
+      "dest" : "/"
     }
   ]
 }
